--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerful-mitt",
-  "version": "4.0.19",
+  "version": "4.0.21",
   "description": "Powerful Emitter",
   "main": "PowerfulEmit.js",
   "scripts": {
@@ -100,7 +100,6 @@
     "minimist": "^1.2.6",
     "mocha": "^8.0.1",
     "npm-run-all": "^4.1.5",
-    "patch-package": "^6.4.7",
     "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
     "sinon": "^9.0.2",
@@ -109,6 +108,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "tapable": "^2.2.1"
+    "tapable": "^2.2.1",
+    "patch-package": "^6.4.7"
   }
 }
